--- a/pages/index.html
+++ b/pages/index.html
@@ -69,6 +69,7 @@
         text-align: center;
         position: absolute;
         background: hsl(0, 0%, 100%);
+        -webkit-backdrop-filter: blur(30px);
         backdrop-filter: blur(30px);
       }
       .form-outline > input{
@@ -88,7 +89,7 @@
 
 
           
-          <form method="post" action="/register" style="text-align: left">
+            <form method="post" action="/register" class="left-align-form">
             <div class="form-outline mb-4">
               <label class="form-label" for="form3Example1">Name</label>
               <input type="text" id="form3Example1" name="name" class="form-control" />
